// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config test bad config bad cacheManager 1`] = `[CacheManagerPgkNotInstalledError:  CacheManager "BadCacheManager" package has not been found installed. Try to install it: npm install BadCacheManager --save or yarn add BadCacheManager]`;

exports[`config test bad config bad defaultCache 1`] = `[CachePgkNotInstalledError:  Cache "BadCache" package has not been found installed. Try to install it: npm install BadCache --save or yarn add BadCache]`;

exports[`config test with config 1`] = `
SimpleCacheManager {
  "defaultCache": [Function],
  "defaultOptionsCache": Object {
    "max": 1,
  },
  "dynamic": true,
  "group": Map {},
  "startedCache": Map {},
}
`;

exports[`config test without config 1`] = `
SimpleCacheManager {
  "defaultCache": [Function],
  "defaultOptionsCache": undefined,
  "dynamic": true,
  "group": Map {},
  "startedCache": Map {},
}
`;

exports[`integrations test cache 1`] = `"hi test test"`;

exports[`integrations test cache 2`] = `"hi test test"`;

exports[`integrations test cache 3`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 5,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchContext": undefined,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 1,
    "keyList": Array [
      "testtest",
      null,
      null,
      null,
      null,
    ],
    "keyMap": Map {
      "testtest" => 0,
    },
    "max": 5,
    "maxSize": 0,
    "next": Uint8Array [
      0,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDeleteOnStaleGet": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 1,
    "sizeCalculation": undefined,
    "tail": 0,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      "hi test test",
      null,
      null,
      null,
      null,
    ],
  },
}
`;

exports[`integrations test cache 4`] = `"hi test2 test2"`;

exports[`integrations test cache 5`] = `
MemoryCache {
  "name": "hi",
  "options": Object {
    "max": 5,
  },
  "store": LRUCache {
    "allowStale": false,
    "disposeAfter": null,
    "disposed": null,
    "fetchContext": undefined,
    "fetchMethod": null,
    "free": Stack {
      "heap": Uint8Array [
        0,
        0,
        0,
        0,
        0,
      ],
      "length": 0,
    },
    "head": 0,
    "initialFill": 2,
    "keyList": Array [
      "testtest",
      "test2test2",
      null,
      null,
      null,
    ],
    "keyMap": Map {
      "testtest" => 0,
      "test2test2" => 1,
    },
    "max": 5,
    "maxSize": 0,
    "next": Uint8Array [
      1,
      0,
      0,
      0,
      0,
    ],
    "noDeleteOnFetchRejection": false,
    "noDeleteOnStaleGet": false,
    "noDisposeOnSet": false,
    "noUpdateTTL": false,
    "prev": Uint8Array [
      0,
      0,
      0,
      0,
      0,
    ],
    "size": 2,
    "sizeCalculation": undefined,
    "tail": 1,
    "ttl": 0,
    "ttlAutopurge": false,
    "ttlResolution": 1,
    "updateAgeOnGet": false,
    "updateAgeOnHas": false,
    "valList": Array [
      "hi test test",
      "hi test2 test2",
      null,
      null,
      null,
    ],
  },
}
`;

exports[`integrations with mapCache 1`] = `"hi test test"`;

exports[`integrations with mapCache 2`] = `"hi test test"`;

exports[`integrations with mapCache 3`] = `
NoOpCache {
  "name": "hi",
}
`;

exports[`integrations with mapCache 4`] = `"hi test2 test2"`;

exports[`integrations with mapCache 5`] = `
NoOpCache {
  "name": "hi",
}
`;
